crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_hidden_elems__remove_hidden_elems-12.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_hidden_elems.rs
expression: "test_config(r#\"{ \"removeHiddenElems\": {} }\"#,\nSome(r#\"<svg width=\"480\" height=\"360\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove only hidden visibility without visible children -->\n    <style>\n        .a { visibility: visible; }\n    </style>\n    <rect x=\"96\" y=\"96\" width=\"96\" height=\"96\" fill=\"lime\" />\n    <g visibility=\"hidden\">\n        <rect x=\"96\" y=\"96\" width=\"96\" height=\"96\" fill=\"red\" />\n    </g>\n    <rect x=\"196.5\" y=\"196.5\" width=\"95\" height=\"95\" fill=\"red\"/>\n    <g visibility=\"hidden\">\n        <rect x=\"196\" y=\"196\" width=\"96\" height=\"96\" fill=\"lime\" visibility=\"visible\" />\n    </g>\n    <rect x=\"96\" y=\"96\" width=\"96\" height=\"96\" visibility=\"hidden\" class=\"a\" />\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="480" height="360">
    <!-- remove only hidden visibility without visible children -->
    <style>
        .a { visibility: visible; }
    </style>
    <rect x="96" y="96" width="96" height="96" fill="lime"/>
    <rect x="196.5" y="196.5" width="95" height="95" fill="red"/>
    <g visibility="hidden">
        <rect x="196" y="196" width="96" height="96" fill="lime" visibility="visible"/>
    </g>
    <rect x="96" y="96" width="96" height="96" visibility="hidden" class="a"/>
</svg>
