crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_hidden_elems__remove_hidden_elems-13.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_hidden_elems.rs
expression: "test_config(r#\"{ \"removeHiddenElems\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 64 64\">\n    <!-- remove references to useless defs -->\n    <defs>\n        <path d=\"M15.852 62.452\" id=\"a\"/>\n    </defs>\n    <use href=\"#a\"/>\n    <use opacity=\".35\" href=\"#a\"/>\n</svg>\n\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
    <!-- remove references to useless defs -->
    
    
    
</svg>
